# gofile-dl

./: .gitignore  .pre-commit-config.yaml  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: publish.yml
src/gofile_dl/: __main__.py  gofile_dl.py
src/gofile_dl/client/: gofile.py
