[metadata]
name = gofile-dl
version = attr: gofile_dl.__version__
author = rdnkarchiver
author_email = rdnkarchiver@protonmail.com
description = Download files from gofile.io
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rdnkarchiver/gofile-dl
project_urls =
    Bug Tracker = https://github.com/rdnkarchiver/gofile-dl/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
install_requires =
    aiohttp
    requests
    tqdm

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    gofile-dl = gofile_dl.__main__:main
